# HighVolumes

./: .gitignore  CMakeLists.txt  CONVERGENCE.md  OPTIMIZATIONS.md  README.md
benchmark/: CMakeLists.txt  bench_birk.py  benchmark.cpp  benchmark.hpp  benchmark.py  benchmark2.py  benchmark_A1_polytope.cpp  benchmark_A1_volume.cpp  benchmark_A2_preprocessing.cpp  benchmark_app.cpp  benchmark_ball_intersect.cpp  benchmark_dotProduct.cpp  benchmark_intersect.cpp  benchmark_jit.cpp  benchmark_polyvest.cpp  benchmark_preprocessing.cpp  benchmark_randomness.cpp  benchmark_test_macro.cpp  benchmark_test_xyz_f.cpp  benchmarks_old.py  bm.sh  convergence.cpp  plot.py  test_macro.cpp  test_xyz_f.cpp
benchmark/stream/: READ.ME  mystream  stream  stream.c  stream1  streamcache  streamnow  tsc_x86.h
doc/: talk.txt
doc/graphics/: comp_coord_ell.eps  comp_coord_poly.tex  comp_ell.tex
doc/graphics_sparsity/: csc.ipe  jit.ipe  motivation.ipe
doc/presentation/: basic_sampling.eps  direction_0.eps  focus_on_sample_1.eps  notes.md  polytope_zone_sampling_pretty.eps  sample_1.eps  slides_backup.tex  zone_example.eps
graphics/: comp_coord_ell.tex  comp_coord_poly.eps  comp_ell.eps  comp_poly.eps  comp_poly.tex
graphics/report/: algo.eps  algo.ipe
optimizations/: LOG.md  analysis_ellipsoid.md  analysis_polytope.md  analysis_polytopeCSC.md  analysis_polytopeJIT.md  plots.md
optimizations/2020-06-06/: 2var_runtime_bm.out  2var_runtime_bm_performance_mean.eps  2var_runtime_bm_roofline.eps  2var_runtime_bm_runtime_mean.eps  allbest_roofline_cross_bm_io_mean.eps  allbest_roofline_cross_bm_performance_mean.eps  allbest_roofline_cross_bm_roofline.eps  (+33 more)
papers/: .README.md.swp  README.md
polyvest/: CMakeLists.txt  main.cpp  vol.cpp  vol.h
polyvest/examples/: 2var_TSP_10.ine  2var_TSP_100.ine  2var_TSP_150.ine  2var_TSP_20.ine  2var_TSP_200.ine  2var_TSP_30.ine  2var_TSP_40.ine  2var_TSP_50.ine  2var_TSP_60.ine  Fm_4.ine  Fm_5.ine  Fm_6.ine  cc_8_10.ine  cc_8_11.ine  cc_8_5.ine  cc_8_6.ine  cc_8_7.ine  cc_8_8.ine  cc_8_9.ine  ccp_5.ine  ccp_6.ine  cube_2_tilt  gagandeep  rand_3_30_100.ine  rand_3_30_20.ine  rand_3_30_500.ine  rand_5_30_20.ine  rand_7_30_20.ine  rand_8_30_20.ine  rh_10_20.ine  rh_10_25.ine  rh_10_30.ine  rh_8_20.ine  rh_8_25.ine  rh_8_30.ine  rv_10_12.ine  rv_10_13.ine  rv_10_14.ine  rv_8_10.ine  rv_8_11.ine  (+6 more)
polyvest/examples/birk/: README.md  birk.m  birk10.ine  birk11.ine  birk12.ine  birk13.ine  birk14.ine  birk15.ine  birk16.ine  birk17.ine  birk18.ine  birk19.ine  birk20.ine  birk3.ine  birk4.ine  birk5.ine  birk6.ine  birk7.ine  birk8.ine  birk9.ine
polyvest/examples/birk/old/: README.md  birk7.ine
presentation/: basic_polytope.eps  main.tex  polytope_zone_sampling.eps  polytope_zone_sampling_2.eps  sample_2.eps  zones.eps
src/: .gitignore  CMakeLists.txt  beta_cut.c  beta_cut.h  ellipsoid.c  ellipsoid.h  estimate.cpp  make.txt  peterem  peterem.cpp  peterem.hpp  silaeubl.cpp  silaeubl.hpp  volume.c  volume.h  volume_helper.cpp  volume_helper.hpp
src/jit/: jit.c  jit.h
src/poly/: create_poly  create_poly.cpp  cube.c  cube.h  out.out  volume.c  volume.h  volume_helper.cpp  volume_helper.hpp
src/poly/preprocess/: init_ellipsoid.c
src/random/: CMakeLists.txt  prng.c  prng.h
src/random/generators/: CMakeLists.txt  mersenne.c  mersenne.h  shiftreg.c  shiftreg.h  std_rand.c  std_rand.h
src/util/: CMakeLists.txt  cli.hpp  cli_functions.hpp  image_bmp.hpp  performance_counter.cpp  performance_counter.hpp  poly2file.cpp  split.hpp  table.hpp  timer.hpp  union_find.hpp
src/volume/: .#global.c  .volume_helper.cpp.swp  cholesky.c  cholesky.h  dotProduct.c  dotProduct.h  dotProduct_auto1.c  dotProduct_auto2.c  dotProduct_gen.py  ellipsoid.c  ellipsoid.h  ft.h  global.c  global.h  matrix.h  polytope.c  polytope.h  preprocess.h  volume.c  volume.h  volume_bmp.hpp  volume_cost.cpp  volume_cost.hpp  volume_examples.cpp  volume_examples.hpp  volume_helper.cpp  volume_helper.hpp
src/volume/body/: CMakeLists.txt  body.h
src/volume/ellipsoid/: CMakeLists.txt  ellipsoid.c  ellipsoid.h
src/volume/ellipsoid/cacheReset/: CMakeLists.txt  cacheReset.c  cacheReset.h
src/volume/ellipsoid/cacheUpdateCoord/: CMakeLists.txt  cacheUpdateCoord.c  cacheUpdateCoord.h
src/volume/ellipsoid/intersectCoord/: CMakeLists.txt  intersectCoord.c  intersectCoord.h
src/volume/linalg/: CMakeLists.txt  cholesky.c  cholesky.h  linalg.c  linalg.h
src/volume/linalg/dotProduct/: CMakeLists.txt  dotProduct.c  dotProduct.h  dotProduct_auto1.c  dotProduct_auto2.c  dotProduct_gen.py
src/volume/matrix/: CMakeLists.txt  matrix.c  matrix.h
src/volume/polytope/: CMakeLists.txt  polytope.c  polytope.h  polytope_glpk.c
src/volume/polytopeCSC/: CMakeLists.txt  polytopeCSC.c  polytopeCSC.h
src/volume/polytopeCSC/intersectCoord/: .#intersectCoord.h  CMakeLists.txt  intersectCoord.c  intersectCoord.h
src/volume/polytopeJIT/: CMakeLists.txt  polytopeJIT.c  polytopeJIT.h
src/volume/polytopeJIT/jit/: CMakeLists.txt  cacheReset.c  cacheReset.h  cacheUpdateCoord.c  cacheUpdateCoord.h  inside.c  inside.h  intersect.c  intersect.h  intersectCoord.c  intersectCoord.h
src/volume/polytopeJIT/jit/test/: c.c  s.s  test.py
src/volume/polytopeT/: CMakeLists.txt  polytopeT.c  polytopeT.h
src/volume/polytopeT/intersectCoord/: CMakeLists.txt  intersectCoord.c  intersectCoord.h
src/volume/preprocess/: init_ellipsoid.c  preprocess.c  preprocess.h
src/volume/walkCoord/: walkCoord_parallel.c
test/: .#test_preprocess.cpp  CMakeLists.txt  test.py  test_helpers.cpp  test_helpers.hpp  test_preprocess.cpp  test_preprocess.hpp
test/general/: CMakeLists.txt  end_to_end_test.cpp  example_polytopes.hpp
test/jit/: CMakeLists.txt  jit.cpp
test/matrix/: CMakeLists.txt  unittests.cpp
test/polytopeCSC/: CMakeLists.txt  unittests.cpp
test/preprocess/: CMakeLists.txt  test_helpers.cpp  test_helpers.hpp  test_init.cpp  test_preprocess.cpp  test_preprocess.hpp  unittests.cpp
test/random/: CMakeLists.txt  random.cpp
test/volume/: CMakeLists.txt  basics.cpp  estimate.cpp  examples.cpp
(+805 files in other folders)
